Finish Item filter blocked icon